--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <!--<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>-->
+
 
 
     <application
@@ -41,6 +43,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <service android:name=".GeoFenceRegistrationService"></service>
+        <service android:name=".DetectedActivitiesService"
+            android:exported="false"></service>
+        <service android:name=".BackgroundDetectedService"></service>
     </application>
 
 </manifest>
